Fix download links and video controls not receiving clicks when comment is too long.
For some reason the combination of a 'float: left' followed by a 'position: relative'
seems to cause this.

--- a/public/static/css/app/main.css
+++ b/public/static/css/app/main.css
@@ -2687,7 +2687,6 @@ main.index-threaded {
 			} */
 		
 		.post {
-			position: relative;
 			font-size: 105%;
 			margin: 0;
 			padding: 0.7em;
